gpt-voice commit

--- a/html/hello-world.html
+++ b/html/hello-world.html
@@ -2,12 +2,8 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1 id="output"></h1>
     <script>
-      (() => {
-        const message = "Hello, World!";
-        documen.getElementById("output").innerHTML = message;
-      })();
+      (() => ocument.write("Hello World!"))();
     </script>
   </body>
 </html>
