--- a/chat.html
+++ b/chat.html
@@ -18,7 +18,7 @@
         button,.btn{font:'Perfect DOS VGA 437',sans-serif;}
         .btn{width:50vw;text-align:center;height:2.5em;}
         legend{text-align:left;cursor:pointer;user-select:none;}
-        legend:hover{color:blue;}
+        legend:hover{color:aqua;}
         #editor-wrapper{position:relative;height:100%;width:100%;}
         #editor{height:100%;width:100%;}
         #resizer{position:absolute;bottom:0;left:0;height:5px;width:100%;background-color:gray;cursor:row-resize;}
