--- a/chat.html
+++ b/chat.html
@@ -13,15 +13,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/mode/css/css.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/mode/htmlmixed/htmlmixed.min.js"></script>
     <style>
-        body, html{margin:0;height:100%;font:large 'Perfect DOS VGA 437',sans-serif;background:black;color:white;}
-        textarea{font:large 'Perfect DOS VGA 437',sans-serif;background-color:#B3C0B7;}
-        button,.btn{font:'Perfect DOS VGA 437',sans-serif;}
-        .btn{width:50vw;text-align:center;height:2.5em;}
-        legend{text-align:left;cursor:pointer;user-select:none;}
-        legend:hover{color:aqua;}
-        #editor-wrapper{position:relative;height:100%;width:100%;}
-        #editor{height:100%;width:100%;}
-        #resizer{position:absolute;bottom:0;left:0;height:5px;width:100%;background-color:gray;cursor:row-resize;}
+        body,html{margin:0;height:100%;font:large 'Perfect DOS VGA 437',sans-serif;background:black;color:white}
+        textarea{font:large 'Perfect DOS VGA 437',sans-serif;background-color:#B3C0B7}
+        button,.btn{font:'Perfect DOS VGA 437',sans-serif}
+        .btn{width:50vw;text-align:center;height:2.5em}
+        legend{text-align:left;cursor:pointer;user-select:none}
+        legend:hover{color:aqua}
+        #editor-wrapper{position:relative;height:100%;width:100%}
+        #editor{height:100%;width:100%}
+        #resizer{position:absolute;bottom:0;left:0;height:5px;width:100%;background:gray;cursor:row-resize}
+        #resizer:hover {background:aqua}
     </style>
 </head>
 <body>
